--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "Express",
-  "version": "1.0.0",
-  "description": "Express and Connect",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/StormrageXC/Express.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/StormrageXC/Express/issues"
-  },
-  "homepage": "https://github.com/StormrageXC/Express#readme",
-  "dependencies": {
-    "connect": "^3.4.0"
-  }
+    "name": "express",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "debug": "node --inspect-brk ./bin/www"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.0",
+        "connect": "^3.4.0",
+        "cookie-parser": "~1.4.4",
+        "debug": "~2.6.9",
+        "ejs": "~2.6.1",
+        "express": "~4.16.1",
+        "express-session": "^1.17.1",
+        "http-errors": "~1.6.3",
+        "morgan": "~1.9.1",
+        "redis": "^3.0.2"
+    }
 }
