--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "debug": "node --inspect-brk ./bin/www"
     },
     "dependencies": {
+        "basic-auth": "^2.0.1",
         "bcrypt": "^5.0.0",
         "connect": "^3.4.0",
         "cookie-parser": "~1.4.4",
