--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-    "name": "express",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "start": "node ./bin/www",
-        "debug": "node --inspect-brk ./bin/www"
-    },
-    "dependencies": {
-        "basic-auth": "^2.0.1",
-        "bcrypt": "^5.0.0",
-        "connect": "^3.4.0",
-        "cookie-parser": "~1.4.4",
-        "debug": "~2.6.9",
-        "ejs": "~2.6.1",
-        "express": "~4.16.1",
-        "express-session": "^1.17.1",
-        "http-errors": "~1.6.3",
-        "morgan": "~1.9.1",
-        "redis": "^3.0.2"
-    }
+  "name": "express",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
+  }
 }
