--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": " set DEBUG=myapp:* & node ./bin/www"
+    "start": " set DEBUG=myapp:* & node ./bin/www",
+    "debug": "set DEBUG=myapp:* & node --inspect-brk=3000 ./bin/www "
   },
   "dependencies": {
+    "body-parser": "^2.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
