--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "body-parser": "^2.2.0",
+    "bootstrap": "^5.3.6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
+    "ejs": "^3.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
